--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@ogsplendid/ajs",
   "version": "1.0.0",
-  "description": "",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,5 +14,9 @@
   "bugs": {
     "url": "https://github.com/OGsplendid/ajs/issues"
   },
-  "homepage": "https://github.com/OGsplendid/ajs#readme"
+  "homepage": "https://github.com/OGsplendid/ajs#readme",
+  "keywords": [
+    "dist/index.js"
+  ],
+  "description": ""
 }
